src/objects/DASR_Request__c.object
<CustomObject>
    <fields>
        <fullName>State_Province_Code__c</fullName>
        <label>State Province Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <description>This field is to store the Supplier ID</description>
        <label>Supplier ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <formula>LDC_Account__r.Account__r.Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier ID (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply_Group__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Supply Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Percentage__c</fullName>
        <description>This field is created to store PA Tax_Exemption_Percentage</description>
        <label>Tax Exemption Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_KWH_Quantity__c</fullName>
        <label>Total KWH Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_JSON__c</fullName>
        <label>Transaction JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transmission_Obligation_Quantity__c</fullName>
        <label>Transmission Obligation Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Initiated_Change_Reason_Activity__c</fullName>
        <label>Utility Initiated Change Reason Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned Service End Date</fullName>
                </value>
                <value>
                    <fullName>Assigned Service Start Date</fullName>
                </value>
                <value>
                    <fullName>Bill Calculator</fullName>
                </value>
                <value>
                    <fullName>Budget Bill Amount</fullName>
                </value>
                <value>
                    <fullName>Budget Bill Status</fullName>
                </value>
                <value>
                    <fullName>Change AEP&apos;s SDP Number</fullName>
                </value>
                <value>
                    <fullName>Change Aggregation Category</fullName>
                </value>
                <value>
                    <fullName>Change Billing Type (Billing Option)</fullName>
                </value>
                <value>
                    <fullName>Change Bill Presenter</fullName>
                </value>
                <value>
                    <fullName>Change Customer Billing Period (Bimonthly/Monthly)</fullName>
                </value>
                <value>
                    <fullName>Change Distribution Loss Factor</fullName>
                </value>
                <value>
                    <fullName>Change Energy Supplier Budget Billing Status (First Energy Only)</fullName>
                </value>
                <value>
                    <fullName>Change in Bill/Mail Name and/or Address</fullName>
                </value>
                <value>
                    <fullName>Change in Customer Name and/or Service Address</fullName>
                </value>
                <value>
                    <fullName>Change in party to receive copy of bills</fullName>
                </value>
                <value>
                    <fullName>Change in party to receive copy of notices</fullName>
                </value>
                <value>
                    <fullName>Change LDC Account Number for Customer</fullName>
                </value>
                <value>
                    <fullName>Change LDC Billing Cycle</fullName>
                </value>
                <value>
                    <fullName>Change LDC Rate Class</fullName>
                </value>
                <value>
                    <fullName>Change LDC Rate Subclass Code</fullName>
                </value>
                <value>
                    <fullName>Change Meter Cycle</fullName>
                </value>
                <value>
                    <fullName>Change Meter Multiplier</fullName>
                </value>
                <value>
                    <fullName>Change Meter Type</fullName>
                </value>
                <value>
                    <fullName>Change Network Service Peak Load</fullName>
                </value>
                <value>
                    <fullName>Change Number of Dials</fullName>
                </value>
                <value>
                    <fullName>Change Peak Load Contribution</fullName>
                </value>
                <value>
                    <fullName>Change Scheduling Coordinator</fullName>
                </value>
                <value>
                    <fullName>Change Special Meter Configuration</fullName>
                </value>
                <value>
                    <fullName>Change Strata or Load Profile</fullName>
                </value>
                <value>
                    <fullName>Change Supply Voltage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Failed__c</fullName>
        <formula>IF(ISPICKVAL(Integration_Status__c,&quot;Validation Failed&quot;),true,false)</formula>
        <label>Validation Failed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Message__c</fullName>
        <label>Validation Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VendorID__c</fullName>
        <description>This field is created to store vendor id</description>
        <label>Vendor ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <formula>LDC_Account__r.LDC_Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Id (old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_File_Name__c</fullName>
        <description>This field is created to store the XML file name of DASR Request</description>
        <label>XML File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>DASR Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Rate_Code__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Reason_Blank</fullName>
        <columns>NAME</columns>
        <columns>DASR_Type__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Change_Reason_Code__c</columns>
        <columns>Contract__c</columns>
        <columns>Validation_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Integration_Send_Date__c</columns>
        <columns>Reason_Rejected__c</columns>
        <columns>Reason_Rejected_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAC</value>
        </filters>
        <filters>
            <field>Change_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Dynegy_Initiated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Change Reason Blank</label>
    </listViews>
    <listViews>
        <fullName>DASR_Request_Queue</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>DASR_Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>DASR Request Queue</label>
        <queue>DASR_Request_Queue</queue>
    </listViews>
    <listViews>
        <fullName>DASRs_Pending</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>DASR_Submit_Date__c</field>
            <operation>lessThan</operation>
            <value>6/21/2016 12:00 AM</value>
        </filters>
        <label>DASRs Pending</label>
    </listViews>
    <listViews>
        <fullName>DASRs_Pending_Today</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <columns>Recipient_Name__c</columns>
        <columns>Rate_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>DASR_Submit_Date__c</field>
            <operation>lessThan</operation>
            <value>NEXT_N_DAYS:2</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kmuck</value>
        </filters>
        <label>DASRs Pending Today</label>
    </listViews>
    <listViews>
        <fullName>DASRs_Pending_kmuck</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kmuck</value>
        </filters>
        <filters>
            <field>DASR_Submit_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>DASRs Pending KMuck</label>
    </listViews>
    <listViews>
        <fullName>DASRs_Waiting_for_Response</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Waiting For Response</value>
        </filters>
        <label>DASRs Waiting for Response</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Change_Pending</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAC</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Dynegy Initiated - Change - Pending</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Change_Waiting_Response</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAC</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Waiting For Response</value>
        </filters>
        <label>Dynegy Initiated - Change - Wtng Rsp</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Drop_DASR</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>Drop_Reason__c</columns>
        <columns>Drop_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dynegy_Initiated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAD</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>notEqual</operation>
            <value>Manually Fulfilled</value>
        </filters>
        <label>Dynegy Initiated - Drop DASR</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Enrollment_DASR</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dynegy_Initiated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAE</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>notEqual</operation>
            <value>Manually Fulfilled</value>
        </filters>
        <label>Dynegy Initiated - Enrollment DASR</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Enrollment_DASR_Pending_Waiting</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dynegy_Initiated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAE</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Waiting For Response</value>
        </filters>
        <label>Dynegy Initiated - Enroll DASR - Waiting</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Enrollment_Pending</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAE</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Dynegy Initiated - Enrollment - Pending</label>
    </listViews>
    <listViews>
        <fullName>Dynegy_Initiated_Enrollment_Waiting_Response</fullName>
        <columns>NAME</columns>
        <columns>Dynegy_Initiated__c</columns>
        <columns>DASR_Type__c</columns>
        <columns>LDC_Account__c</columns>
        <columns>Change_Effective_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Integration_Status__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DASR_Type__c</field>
            <operation>equals</operation>
            <value>GAAE</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Waiting For Response</value>
        </filters>
        <label>Dynegy Initiated - Enrollment - Wtng Rsp</label>
    </listViews>
    <listViews>
        <fullName>Failed_DASR_Requests</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>DASR_Type__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Validation_Message__c</columns>
        <columns>Integration_Send_Date__c</columns>
        <columns>Reason_Rejected__c</columns>
        <columns>Reason_Rejected_Desc__c</columns>
        <columns>DASR_Submit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Failed DASR Requests (Rejects)</label>
    </listViews>
    <nameField>
        <displayFormat>DASR-{0}</displayFormat>
        <label>DASR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DASR Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contract_value_can_not_be_null</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contract__c = NULL,Dynegy_Initiated__c = true)</errorConditionFormula>
        <errorMessage>Contract value can not be NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Drop_Date_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(LDC_Account__r.LDC_Vendor__r.Service_State__c,&quot;IL&quot;)), AND(ISPICKVAL(DASR_Type__c,&quot;GAAD&quot;),ISNULL(Drop_Date__c )),AND(ISPICKVAL(DASR_Type__c,&quot;GAAD&quot;),OR(ISNULL(Drop_Date__c ),ISPICKVAL(Drop_Reason__c,&quot;&quot; ))))</errorConditionFormula>
        <errorDisplayField>Drop_Date__c</errorDisplayField>
        <errorMessage>Drop date is required if DASR Type of GAAD is selected. LDC Account Service State has to be IL.  Reason needs to be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Drop_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(LDC_Account__r.LDC_Vendor__r.Service_State__c,&apos;IL&apos;)), 
NOT(ISNEW()), 
ISPICKVAL(DASR_Type__c,&quot;GAAD&quot;), 
OR(ISPICKVAL(Drop_Reason__c,&apos;&apos;),ISNULL( Drop_Date__c )))</errorConditionFormula>
        <errorDisplayField>Drop_Reason__c</errorDisplayField>
        <errorMessage>Please provide a valid drop reason and drop date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Drop_Reason_description_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Drop_Reason__c  , &apos;Other&apos;)  &amp;&amp;  ISBLANK( Drop_Reason_Description__c ) &amp;&amp; NOT(ISPICKVAL(LDC_Account__r.LDC_Vendor__r.Service_State__c,&apos;IL&apos;))</errorConditionFormula>
        <errorMessage>Drop Reason description cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Contract_Counter_Signed_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(Contract__r.Contract_Counter_Signed_Date__c = null,Contract__r.Contract_Counter_Signed_Date__c &gt; NOW()), OR(ISPICKVAL( DASR_Type__c,&quot;GAAE&quot;),ISPICKVAL( DASR_Type__c,&quot;GAAC&quot;)))</errorConditionFormula>
        <errorDisplayField>Contract__c</errorDisplayField>
        <errorMessage>Counter signed date on contract is required for enrollment. The date must be in past. Please enter a valid contract and make sure it has valid counter signed date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_DASR_Change_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(DASR_Type__c,&quot;GAAC&quot;)), 
NOT(ISPICKVAL(Change_Reason__c,&quot;&quot;)),
ISNULL(Drop_Date__c),
ISPICKVAL(Drop_Reason__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>DASR_Type__c</errorDisplayField>
        <errorMessage>Invalid DASR change type. Please select a valid DASR Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_DASR_Drop_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(DASR_Type__c,&quot;GAAD&quot;)), 
OR(NOT(ISPICKVAL(Drop_Reason__c,&quot;&quot;)),NOT(ISNULL( Drop_Date__c) )))</errorConditionFormula>
        <errorDisplayField>DASR_Type__c</errorDisplayField>
        <errorMessage>Invalid DASR drop type. Please select a valid DASR Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_DASR_Type_For_Submit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(DASR_Type__c,&quot;&quot;), NOT(ISNULL( DASR_Submit_Date__c)))</errorConditionFormula>
        <errorMessage>DASR type is required if submit date is provided. Please select DASR Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Submit_Date_For_Submit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(DASR_Type__c,&quot;&quot;)),ISNULL( DASR_Submit_Date__c))</errorConditionFormula>
        <errorMessage>Submit date is required if DASR Type is selected. Please enter submit date.</errorMessage>
    </validationRules>
</CustomObject>